Cheap fix for the buttons text overflow issue

--- a/style.css
+++ b/style.css
@@ -14,16 +14,17 @@ body{
 .page{
     margin: 0;
     width: 100%;
-    height: 100vh;
 }
 h1,h2,p{
     margin: 0;
     text-align: center;
 }
 h1{
+    margin-top: 5em;
     font-size: 3em;
 }
 h2{
+    margin-top: 5em;
     font-size: 2.5em;
 }
 p{
@@ -46,11 +47,16 @@ li{
     width: 300px;
     text-align: center;
     padding: 1em;
-    font-size: 2em;
+    font-size: 1.3em;
 }
 li:hover {
     background-color: #666666;
 }
 .nav-button{
-    height: 12.5vh;
+    height: 100%;
+    padding: 1.5em;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
 }
